--- a/loms/Makefile
+++ b/loms/Makefile
@@ -64,9 +64,9 @@ vendor-proto:
 
 generate:
 	mkdir -p pkg/loms_v1
-	protoc -I api/loms/v1 -I vendor-proto \
+	protoc -I api/loms_v1 -I vendor-proto \
 	--go_out=pkg/loms_v1 --go_opt=paths=source_relative \
 	--plugin=protoc-gen-go=bin/protoc-gen-go \
 	--go-grpc_out=pkg/loms_v1 --go-grpc_opt=paths=source_relative \
 	--plugin=protoc-gen-go-grpc=bin/protoc-gen-go-grpc \
-	api/loms/v1/loms.proto
+	api/loms_v1/loms.proto
