--- a/checkout/Makefile
+++ b/checkout/Makefile
@@ -41,7 +41,7 @@ install-smartimports: bindir
 
 install-go-deps:
 	GOBIN=$(BINDIR) go install google.golang.org/protobuf/cmd/protoc-gen-go@v1.28.1
-	GOBIN=$(LOCAL_BIN) go install -mod=mod google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.2
+	GOBIN=$(BINDIR) go install -mod=mod google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.2
 
 get-go-deps:
 	go get -u google.golang.org/protobuf/cmd/protoc-gen-go
