--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,107 @@
 version: "3.1"
+
+networks:
+  net-loms:
+    driver: bridge
+  net-checkout:
+    driver: bridge
+
 services:
+  # checkout
+  # database
+  postgres-checkout:
+    image: postgres:15.1
+    environment:
+      POSTGRES_DB: checkout
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: password
+      PGDATA: "/var/lib/postgresql/data/pgdata"
+    volumes:
+      - /tmp/checkout:/var/lib/postgresql/data
+    ports:
+      - 5433:5433
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U user -d checkout"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
+    restart: unless-stopped
+    deploy:
+      resources:
+        limits:
+          cpus: '0.5'
+          memory: 2G
+    networks:
+      - net-checkout    
+  # service
   checkout:
     image: checkout
     build: ./checkout/
+    deploy:
+      replicas: 1
+      resources:
+        limits:
+          cpus: '0.5'
+          memory: 2G
+    restart: unless-stopped
+    environment:
+      DATABASE_URL: postgres://user:password@postgres:5432/checkout?sslmode=disable
     ports:
       - "8080:8080"
       - "8090:8090"
+    depends_on:
+      - postgres-checkout
+    networks:
+      - net-checkout
+
+  # loms
+  # database
+  postgres-loms:
+    image: postgres:15.1
+    environment:
+      POSTGRES_DB: loms
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: password
+      PGDATA: "/var/lib/postgresql/data/pgdata"
+    volumes:
+      - /tmp/loms:/var/lib/postgresql/data
+    ports:
+      - 5432:5432
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U user -d loms"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
+    restart: unless-stopped
+    deploy:
+      resources:
+        limits:
+          cpus: '0.5'
+          memory: 2G
+    networks:
+      - net-loms    
+  #service
   loms:
     image: loms
     build: ./loms/
+    deploy:
+      replicas: 1
+      resources:
+        limits:
+          cpus: '0.5'
+          memory: 2G
+    restart: unless-stopped
+    environment:
+      DATABASE_URL: postgres://user:password@postgres:5432/loms?sslmode=disable
     ports:
       - "8081:8081"
+    depends_on:
+      - postgres-loms
+    networks:
+      - net-loms
+
   # notification:
   #   image: notification
   #   build: ./notification
