--- a/checkout/config.yml.example
+++ b/checkout/config.yml.example
@@ -7,3 +7,9 @@ services:
   checkout:
     httpPort: ""
     grpcPort: ""
+  checkoutDB:
+    host: ""
+    port: ""
+    user: ""
+    password: ""
+    dbName: ""
