--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,23 +27,13 @@ services:
       retries: 5
       start_period: 10s
     restart: unless-stopped
-    deploy:
-      resources:
-        limits:
-          cpus: '4'
-          memory: 4G
     networks:
       - net-checkout    
   # service
   checkout:
     image: checkout
     build: ./checkout/
-    deploy:
-      replicas: 1
-      resources:
-        limits:
-          cpus: '4'
-          memory: 4G
+    container_name: 'checkout'
     restart: unless-stopped
     environment:
       DATABASE_URL: postgres://user:password@postgres:5432/checkout?sslmode=disable
@@ -81,6 +71,7 @@ services:
   loms:
     image: loms
     build: ./loms/
+    container_name: 'loms'
     restart: unless-stopped
     environment:
       DATABASE_URL: postgres://user:password@postgres:5432/loms?sslmode=disable
