[GOHW-3]: added checkout delete_from_cart

--- a/checkout/config.yml.example
+++ b/checkout/config.yml.example
@@ -8,8 +8,8 @@ services:
     httpPort: ""
     grpcPort: ""
   checkoutDB:
-    host: ""
-    port: ""
-    user: ""
-    password: ""
-    dbName: ""
+    hostDB: ""
+    portDB: ""
+    userDB: ""
+    passwordDB: ""
+    nameDB: ""
