--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,7 @@
 version: "3.1"
 
 networks:
-  net-loms:
-    driver: bridge
-  net-checkout:
+  net:
     driver: bridge
 
 services:
@@ -20,6 +18,10 @@ services:
       - /tmp/checkout:/var/lib/postgresql/data
     ports:
       - 5433:5433
+    command:
+      - "postgres"
+      - "-c"
+      - "port=5433"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U user -d checkout"]
       interval: 10s
@@ -28,22 +30,22 @@ services:
       start_period: 10s
     restart: unless-stopped
     networks:
-      - net-checkout    
+      - net
   # service
-  app-checkout:
-    image: app-checkout
+  checkout:
+    image: checkout
     build: ./checkout/
-    container_name: 'app-checkout'
+    container_name: 'checkout'
     restart: unless-stopped
     environment:
-      DATABASE_URL: postgres://user:password@postgres:5432/checkout?sslmode=disable
+      DATABASE_URL: postgres://user:password@postgres-checkout:5433/checkout?sslmode=disable
     ports:
       - "8080:8080"
       - "8090:8090"
     depends_on:
       - postgres-checkout
     networks:
-      - net-checkout
+      - net
 
   # loms
   # database
@@ -66,21 +68,21 @@ services:
       start_period: 10s
     restart: unless-stopped
     networks:
-      - net-loms    
+      - net
   #service
-  app-loms:
-    image: app-loms
+  loms:
+    image: loms
     build: ./loms/
-    container_name: 'app-loms'
+    container_name: 'loms'
     restart: unless-stopped
     environment:
-      DATABASE_URL: postgres://user:password@postgres:5432/loms?sslmode=disable
+      DATABASE_URL: postgres://user:password@postgres-loms:5432/loms?sslmode=disable
     ports:
       - "8081:8081"
     depends_on:
       - postgres-loms
     networks:
-      - net-loms
+      - net
 
   # notification:
   #   image: notification
