[GOHW-3]: added errors, some fixes

--- a/checkout/config.yml.example
+++ b/checkout/config.yml.example
@@ -7,9 +7,9 @@ services:
   checkout:
     httpPort: ""
     grpcPort: ""
-  checkoutDB:
-    hostDB: ""
-    portDB: ""
+  checkoutPgBouncer:
+    host: ""
+    port: ""
     userDB: ""
     passwordDB: ""
     nameDB: ""
