--- a/loms/config.yml.example
+++ b/loms/config.yml.example
@@ -1,9 +1,9 @@
 services:
   loms:
     port: ""
-  lomsDB:
-    hostDB: ""
-    portDB: ""
+  lomsPgBouncer:
+    host: ""
+    port: ""
     userDB: ""
     passwordDB: ""
     nameDB: ""
