[GOHW-4]: added worker pool, improved list_cart

--- a/checkout/config.yml.example
+++ b/checkout/config.yml.example
@@ -4,6 +4,8 @@ services:
   productService:
     address: ""
     token: ""
+    listCartWorkersCount: 
+    rateLimit: 
   checkout:
     httpPort: ""
     grpcPort: ""
