[GOHW-4]: added cancel order daemon

--- a/loms/config.yml.example
+++ b/loms/config.yml.example
@@ -1,6 +1,9 @@
 services:
   loms:
     port: ""
+  cancelOrderDaemon:
+    workersCount: 
+    cancelOrderTimeInMinutes:     
   lomsPgBouncer:
     host: ""
     port: ""
