[GOHW-6]: added configs

--- a/loms/config.yml.example
+++ b/loms/config.yml.example
@@ -10,3 +10,10 @@ services:
     userDB: ""
     passwordDB: ""
     nameDB: ""
+  kafka:
+    workersCount: 
+    topicForOrders: ""
+    brokers:
+      - ""
+      - ""
+      - ""
