--- a/checkout/config.yml.example
+++ b/checkout/config.yml.example
@@ -7,6 +7,7 @@ services:
     listCartWorkersCount: 
     rateLimit: 
   checkout:
+    name: ""
     httpPort: ""
     grpcPort: ""
   checkoutPgBouncer:
