--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,6 +67,7 @@ services:
     ports:
       - "8080:8080"
       - "8090:8090"
+      - "8070:8070"
     depends_on:
       - postgres-checkout
       - pgbouncer-checkout
@@ -275,5 +276,30 @@ services:
       NAME: "jaeger"
     networks:
       - net
+
+  # prometheus
+  prometheus:
+    image: prom/prometheus
+    ports:
+      - 9090:9090
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+      - ./alerts.yml:/etc/prometheus/alerts.yml
+    # extra_hosts:
+    #   - host.docker.internal:host-gateway
+    networks:
+      - net
+  # grafana
+  grafana:
+    image: grafana/grafana-oss
+    ports:
+      - 3000:3000
+    volumes:
+      - ./data:/var/lib/grafana
+    links:
+      - prometheus
+    networks:
+      - net
+
 
 
