[GOHW-7]: added metrics

--- a/checkout/config.yml.example
+++ b/checkout/config.yml.example
@@ -10,6 +10,7 @@ services:
     name: ""
     httpPort: ""
     grpcPort: ""
+    prometheusPort: ""
   checkoutPgBouncer:
     host: ""
     port: ""
