--- a/loms/config.yml.example
+++ b/loms/config.yml.example
@@ -2,6 +2,7 @@ services:
   loms:
     name: ""
     port: ""
+    prometheusPort: ""
   cancelOrderDaemon:
     workersCount: 
     cancelOrderTimeInMinutes:     
