--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -19,3 +19,9 @@ scrape_configs:
     static_configs:
       - targets: 
         - "loms:8071"
+
+alerting:
+  alertmanagers:
+    - static_configs:
+      - targets:
+        - "alertmanager:9093"
