--- a/alertmanager/config.yml
+++ b/alertmanager/config.yml
@@ -1,4 +1,8 @@
 route:
+  group_by: ['alertname', 'instance', 'job']
+  group_wait: 10s
+  group_interval: 10s
+  repeat_interval: 10s
   receiver: 'alertmanager-telegram-bot'
 
 receivers:
