--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -1,13 +1,12 @@
 global:
   scrape_interval: 2s
   scrape_timeout: 2s
-  evaluation_interval: 1s # Evaluate rules
+  evaluation_interval: 1s
 
 rule_files:
   - "alerts.yml"
 
 scrape_configs:
-  # The job name is added as a label `job=<job_name>` to any timeseries scraped from this config.
   - job_name: "prometheus"
     static_configs:
       - targets: ["localhost:9090"]
