[GOHW-8]: added cached product-service

--- a/checkout/config.yml.example
+++ b/checkout/config.yml.example
@@ -6,6 +6,8 @@ services:
     token: ""
     listCartWorkersCount: 
     rateLimit: 
+    cacheCapacity: 
+    cacheTTL: 
   checkout:
     name: ""
     httpPort: ""
