[GOHW-8]: added cached product-service

--- a/checkout/config.yml.example
+++ b/checkout/config.yml.example
@@ -7,7 +7,7 @@ services:
     listCartWorkersCount: 
     rateLimit: 
     cacheCapacity: 
-    cacheTTL: 
+    cacheTTLInSeconds: 
   checkout:
     name: ""
     httpPort: ""
